Implement functionalities for user interaction with the order